add upload pipeline version to upload_pipeline_server and http main
